--- a/webapp/style/styleIndex.html
+++ b/webapp/style/styleIndex.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="header clearfix"></div>
 	<script type="text/javascript">
-		$('.header').load(PATH.URL+'head.html');
+		$('.header').load('/head.html');
 	</script>
 	<div class="main-content">
 		<div class="grid">
