--- a/dev/output/webapp/style/styleIndex.html
+++ b/dev/output/webapp/style/styleIndex.html
@@ -3,20 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JS研究</title>
-	<link href="../../imgs/base/favicon.ico" rel="icon" type="image/x-icon">
-	<link href="../../imgs/base/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="/imgs/base/favicon.ico" rel="icon" type="image/x-icon">
+	<link href="/imgs/base/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../../css/base/normalize.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/css/base/normalize.css" media="screen">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<!-- 新 Bootstrap 核心 CSS 文件 -->
 	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 	<script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
 	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
-	<link rel="stylesheet" type="text/css" href="../../css/common/zwj.menu.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../../css/pages/javaScript/index/set1.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../../css/pages/javaScript/index/set2.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../../css/pages/javaScript/index.css" media="screen">
-	<script src="../../js/base/base.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/common/zwj.menu.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/css/pages/javaScript/index/set1.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/css/pages/javaScript/index/set2.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/css/pages/style/styleIndex.css" media="screen">
+	<script src="/js/base/base.js"></script>
 	
 </head>
 <body>
@@ -27,15 +27,15 @@
 	<div class="main-content">
 		<div class="grid">
 			<figure class="effect-layla">
-				<img src="../../imgs/pages/javaScript/index/6.jpg" alt="img06"/>
+				<img src="/imgs/pages/javaScript/index/6.jpg" alt="img06"/>
 				<figcaption>
-					<h2>full <span>page</span></h2>
-					<p>fullPage.js</p>
-					<a href="fullPage.html">View more</a>
+					<h2>CSS3 <span>时钟</span></h2>
+					<p>css3时钟</p>
+					<a href="clock.html">View more</a>
 				</figcaption>			
 			</figure>
 			<figure class="effect-layla">
-				<img src="../../imgs/pages/javaScript/index/3.jpg" alt="img03"/>
+				<img src="/imgs/pages/javaScript/index/3.jpg" alt="img03"/>
 				<figcaption>
 					<h2>Crazy <span>Layla</span></h2>
 					<p>When Layla appears, she brings an eternal summer along.</p>
@@ -43,7 +43,7 @@
 				</figcaption>			
 			</figure>
 			<figure class="effect-layla">
-				<img src="../../imgs/pages/javaScript/index/3.jpg" alt="img03"/>
+				<img src="/imgs/pages/javaScript/index/3.jpg" alt="img03"/>
 				<figcaption>
 					<h2>Crazy <span>Layla</span></h2>
 					<p>When Layla appears, she brings an eternal summer along.</p>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="grid">
 			<figure class="effect-moses">
-				<img src="../../imgs/pages/javaScript/index/26.jpg" alt="img26"/>
+				<img src="/imgs/pages/javaScript/index/26.jpg" alt="img26"/>
 				<figcaption>
 					<h2>full<span></span></h2>
 					<p>全屏轮播fullPage.js</p>
@@ -61,7 +61,7 @@
 				</figcaption>			
 			</figure>
 			<figure class="effect-moses">
-				<img src="../../imgs/pages/javaScript/index/20.jpg" alt="img20"/>
+				<img src="/imgs/pages/javaScript/index/20.jpg" alt="img20"/>
 				<figcaption>
 					<h2>Cute <span></span></h2>
 					<p>Moses loves to run after butterflies.</p>
@@ -69,7 +69,7 @@
 				</figcaption>			
 			</figure>
 			<figure class="effect-moses">
-				<img src="../../imgs/pages/javaScript/index/21.jpg" alt="img20"/>
+				<img src="/imgs/pages/javaScript/index/21.jpg" alt="img20"/>
 				<figcaption>
 					<h2>Cute <span></span></h2>
 					<p>Moses loves to run after butterflies.</p>
@@ -80,6 +80,3 @@
 	</div>
 </body>
 </html>
-<script type="text/javascript">
-
-</script>
