--- a/dev/webapp/javaScript/fullPage.html
+++ b/dev/webapp/javaScript/fullPage.html
@@ -6,7 +6,7 @@
 	<link href="imgs/base/favicon.ico" rel="icon" type="image/x-icon">
 	<link href="imgs/base/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="/css/base/normalize_a2ded6e.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/css/base/normalize.css" media="screen">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<!-- 新 Bootstrap 核心 CSS 文件 -->
 	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -25,47 +25,47 @@
 	<div id="fullPage">
 		<div class="section section1 active">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/1_ae95028.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/1.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section2">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/2_1a6f4cf.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/2.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section3">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/3_ae736a5.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/3.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section4">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/4_2a6ff5e.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/4.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section5">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/5_a983956.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/5.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section6">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/6_c70d47c.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/6.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section7">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/7_aae4a18.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/7.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section8">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/8_dbf03b4.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/8.jpg" alt="">
 			</div>
 		</div>
 		<div class="section section9">
 			<div class="bg">
-				<img src="/imgs/pages/javaScript/fullPage/9_5a0ca70.jpg" alt="">
+				<img src="/imgs/pages/javaScript/fullPage/9.jpg" alt="">
 			</div>
 		</div>
 	</div>
