--- a/dev/webapp/public/404.html
+++ b/dev/webapp/public/404.html
@@ -8,7 +8,7 @@
 			background: #f1f4f9;
 		}
 		.base404{
-			background: url(/imgs/base/404_fd53fde.jpg);
+			background: url(../../imgs/base/404.jpg);
 			width: 590px;
 			height: 275px;
 			margin: 200px auto 0;
