--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<link rel="stylesheet" type="text/css" href="/css/github-light_a120a52.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="/css/common/zwj.menu_44002ea.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="/css/pages/index_251b9ad.css" media="screen">
-		<script src="/js/base/base_4f332e6.js"></script>
+		<script src="/js/base/base_a6260c6.js"></script>
 		<script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
 		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
 	</head>
 	<body>
 		<div class="header clearfix"></div>
 		<script type="text/javascript">
-			$('.header').load('head.html');
+			$('.header').load('/head.html');
 		</script>
 		<div class="main">
 			<div class="banner">
