--- a/dev/output/index.html
+++ b/dev/output/index.html
@@ -6,22 +6,22 @@
 		<link href="/imgs/base/favicon.ico" rel="icon" type="image/x-icon">
 		<link href="/imgs/base/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="/css/base/normalize.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="/css/base/normalize_a2ded6e.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<!-- 新 Bootstrap 核心 CSS 文件 -->
 		<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen">
-		<link rel="stylesheet" type="text/css" href="/css/github-light.css" media="screen">
-		<link rel="stylesheet" type="text/css" href="/css/common/zwj.menu.css" media="screen">
-		<link rel="stylesheet" type="text/css" href="/css/pages/index.css" media="screen">
-		<script src="/js/base/base_4f332e6.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/stylesheet_0287193.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="/css/github-light_a120a52.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="/css/common/zwj.menu_44002ea.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="/css/pages/index_251b9ad.css" media="screen">
+		<script src="/js/base/base_a6260c6.js"></script>
 		<script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
 		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
 	</head>
 	<body>
 		<div class="header clearfix"></div>
 		<script type="text/javascript">
-			$('.header').load('head.html');
+			$('.header').load('/head.html');
 		</script>
 		<div class="main">
 			<div class="banner">
@@ -94,4 +94,4 @@
 	</body>
 </html>
 
-<script src="/js/pages/index.js"></script>
+<script src="/js/pages/index_fc27ea5.js"></script>
