--- a/dev/head.html
+++ b/dev/head.html
@@ -14,19 +14,19 @@
 			<a href="index.html" id="menu-index">首页</a>
 		</li>
 		<li>
-			<a href="webapp/style/styleIndex.html" id="menu-style">CSS研究</a>
+			<a href="/webapp/style/styleIndex.html" id="menu-style">CSS研究</a>
 		</li>
 		<li>
-			<a href="webapp/javaScript/index.html" id="menu-javaScript">JS研究</a>
+			<a href="/webapp/javaScript/index.html" id="menu-javaScript">JS研究</a>
 		</li>
 		<li>
-			<a href="webapp/public/404.html" id="menu-model">插件演示</a>
+			<a href="/webapp/public/404.html" id="menu-model">插件演示</a>
 		</li>
 		<li>
-			<a href="webapp/public/404.html" id="menu-link">友情链接</a>
+			<a href="/webapp/public/404.html" id="menu-link">友情链接</a>
 		</li>
 		<li>
-			<a href="webapp/aboutMe/aboutMe.html" id="menu-aboutMe" target="_blank">关于我的</a>
+			<a href="/webapp/aboutMe/aboutMe.html" id="menu-aboutMe" target="_blank">关于我的</a>
 		</li>
 	</ul>
 </div>
