--- a/dev/output/webapp/style/styleIndex.html
+++ b/dev/output/webapp/style/styleIndex.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 	<meta charset="UTF-8">
-	<title>JS研究</title>
+	<title>CSS研究</title>
 	<link href="/imgs/base/favicon.ico" rel="icon" type="image/x-icon">
 	<link href="/imgs/base/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
