--- a/head.html
+++ b/head.html
@@ -11,7 +11,7 @@
 <div id="menu" class="pull-right">
 	<ul class="menu clearfix">
 		<li class="customerPage">
-			<a href="index.html" id="menu-index">首页</a>
+			<a href="/index.html" id="menu-index">首页</a>
 		</li>
 		<li>
 			<a href="/webapp/style/styleIndex.html" id="menu-style">CSS研究</a>
