--- a/head.html
+++ b/head.html
@@ -1,13 +1,13 @@
 <div id="logo">
  <a class="logoOperate" href="javascript:void(0);" style=""></a>
 </div>	
-<div id="profile" class="dropdown pull-right">
+<!-- <div id="profile" class="dropdown pull-right">
 	<a class="dropdown-toggle"  data-toggle="dropdown" href="javascript:void(0);">Admin<span class="caret"></span></a>
 	
 	<div id="dropdown-profile" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu3">
 		<a href="javascript:void(0);">退出</a>
 	</div>
-</div>
+</div> -->
 <div id="menu" class="pull-right">
 	<ul class="menu clearfix">
 		<li class="customerPage">
@@ -27,6 +27,9 @@
 		</li>
 		<li>
 			<a href="/webapp/aboutMe/aboutMe.html" id="menu-aboutMe" target="_blank">关于我的</a>
+		</li>
+		<li>
+			<a href="/webapp/test/test.html" id="menu-test" target="_blank">test</a>
 		</li>
 	</ul>
 </div>
