--- a/webapp/style/styleIndex.html
+++ b/webapp/style/styleIndex.html
@@ -68,8 +68,8 @@
 				<img src="/imgs/pages/javaScript/index/21.jpg" alt="img20"/>
 				<figcaption>
 					<h2>Cute <span></span></h2>
-					<p>Moses loves to run after butterflies.</p>
-					<a href="#">View more</a>
+					<p>cashier</p>
+					<a href="cashier.html">View more</a>
 				</figcaption>			
 			</figure>
 		</div>
