--- a/webapp/style/cashier.html
+++ b/webapp/style/cashier.html
@@ -20,11 +20,17 @@
 	.chart-body{
 		width: 50%;
 		float: left;
+		margin: 20px auto;
 	}
 	.chart-body-content{
-		width: 500px;
+		width: 100%;
 		height: 500px;
 		margin: 20px auto;
+	}
+	.w100{
+		width: 80%;
+		margin-left:10%;
+		margin-right:10%;
 	}
 </style>
 <body>
@@ -37,6 +43,10 @@
 		<div class="chart-body">
 			<!-- <div class="chart-title">用户浏览器版本统计</div> -->
 			<div class="chart-body-content" id="browser-chart-body"></div>
+		</div>
+		<div class="chart-body w100">
+			<!-- <div class="chart-title">用户浏览器版本统计</div> -->
+			<div class="chart-body-content" id="area-chart-body"></div>
 		</div>
 	</div>
 	
