--- a/webapp/style/cashier.html
+++ b/webapp/style/cashier.html
@@ -48,8 +48,11 @@
 			<!-- <div class="chart-title">用户浏览器版本统计</div> -->
 			<div class="chart-body-content" id="area-chart-body"></div>
 		</div>
+		<div class="chart-body w100">
+			<!-- <div class="chart-title">用户浏览器版本统计</div> -->
+			<div class="chart-body-content" id="chain-browser-chart-body"></div>
+		</div>
 	</div>
-	
 </body>
 <script src="//cdn.bootcss.com/echarts/3.2.2/echarts.js"></script>
 <script src="cashier.js"></script>
