--- a/index.html
+++ b/index.html
@@ -26,32 +26,20 @@
 		<div class="main">
 			<div class="banner">
 				<div class="page-header banner1">
-					<h1 class="project-name">React研究所</h1>
+					<h1 class="project-name">11</h1>
 					<h2 class="project-tagline">❤</h2>
-					<a href="https://github.com/i-react" class="btn">GO！</a>
-					<a href="https://github.com/i-react" class="btn">GO！</a>
-					<a href="https://github.com/i-react" class="btn">GO！</a>
 				</div>
 				<div class="page-header banner2">
-					<h1 class="project-name">VUE研究所</h1>
+					<h1 class="project-name">22</h1>
 					<h2 class="project-tagline">❤</h2>
-					<a href="https://learn-vue.github.io" class="btn">GO！</a>
-					<a href="https://learn-vue.github.io" class="btn">GO！</a>
-					<a href="https://learn-vue.github.io" class="btn">GO！</a>
 				</div>
 				<div class="page-header banner3">
-					<h1 class="project-name">Angular研究所</h1>
+					<h1 class="project-name">33</h1>
 					<h2 class="project-tagline">❤</h2>
-					<a href="http://www.apjs.net" class="btn">GO！</a>
-					<a href="http://www.apjs.net" class="btn">GO！</a>
-					<a href="http://www.apjs.net" class="btn">GO！</a>
 				</div>
 				<div class="page-header banner4">
-					<h1 class="project-name">JQuery研究所</h1>
+					<h1 class="project-name">44</h1>
 					<h2 class="project-tagline">❤</h2>
-					<a href="http://youmightnotneedjquery.com" class="btn">GO！</a>
-					<a href="http://youmightnotneedjquery.com" class="btn">GO！</a>
-					<a href="http://youmightnotneedjquery.com" class="btn">GO！</a>
 				</div>
 			</div>
 			<div class="clearfix"></div>
