--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<p>《百年孤独》马尔克斯</p>
 		</div>
 	</body>
+	<div class="foot"><a href="http://www.beian.miit.gov.cn">沪ICP备20003259号-1</a></div>
 </html>
 <!-- rev-hash -->
 <script src="js/pages/index.js?v=025ef472c1ec0a2c68514a48594dc9b7"></script>
